--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.ComidaVeracruzana" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <!-- Base application theme SE MODIFICO EL DarkAction por: NoActionBar. -->
+    <style name="Theme.ComidaVeracruzana" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -18,5 +18,11 @@
         <item name="colorPrimary">@color/orange</item>
         <item name="colorPrimaryVariant">@color/orange_browm</item>
         <item name="colorOnPrimary">@color/gray</item>
-    </style>>
+    </style>
+    
+    <style name="BottomNavigation">
+        <item name="android:background">@color/orange</item>
+        <item name="itemIconTint">@color/white</item>
+        <item name="itemTextColor">@color/black</item>
+    </style>
 </resources>
