--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
-        android:layout_height="249dp"
+        android:layout_height="247dp"
         android:src="@drawable/img1" />
 
     <TextView
@@ -19,8 +19,48 @@
         android:gravity="center"
         android:text="Categorías"
         android:textColor="#000000"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:translationX="20dp"
-        android:translationY="250dp" />
+        android:translationY="248dp" />
+
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:text="Aperitivo"
+        android:translationX="40dp"
+        android:translationY="280dp" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:text="Postres"
+        android:translationX="40dp"
+        android:translationY="329dp" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:text="Sopas y cremas"
+        android:translationX="40dp"
+        android:translationY="378dp" />
+
+    <Button
+        android:id="@+id/button6"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:text="Marisco"
+        android:translationX="40dp"
+        android:translationY="427dp" />
+
+    <Button
+        android:id="@+id/button7"
+        android:layout_width="332dp"
+        android:layout_height="wrap_content"
+        android:text="Bebidas"
+        android:translationX="40dp"
+        android:translationY="476dp" />
 
 </FrameLayout>
