--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -3,12 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
+    android:backgroundTint="#FFFFFF"
     tools:context=".SecondFragment">
 
     <!-- TODO: Update blank fragment layout -->
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Buscar" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Buscar"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:translationX="30dp"
+        android:translationY="45dp" />
+
+    <SearchView
+        android:layout_width="351dp"
+        android:layout_height="37dp"
+        android:background="#000000"
+        android:backgroundTint="#E8E8E8"
+        android:translationX="30dp"
+        android:translationY="80dp" />
 
 </FrameLayout>
